feat: Implementa consulta de email por id
